WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
312281
Audio issues observed when joining Cisco Meeting Server meetings using Safari
https://bugs.webkit.org/show_bug.cgi?id=312281
Summary
Audio issues observed when joining Cisco Meeting Server meetings using Safari
Sheela
Reported
2026-04-14 09:47:25 PDT
Users joining Cisco Meeting Server meetings via Safari browser experience audio problems that impacts the reliability of audio communication. Steps to reproduce: 1. Join a Cisco Meeting Server meeting from Safari 2. Stay connected for several minutes 3. Observe intermittent audio disruptions Safari version - 26.3.1 macOS - Tahoe 26.3.1
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-04-21 09:48:12 PDT
<
rdar://problem/175260977
>
youenn fablet
Comment 2
2026-05-13 06:14:59 PDT
***
Bug 312908
has been marked as a duplicate of this bug. ***
youenn fablet
Comment 3
2026-05-13 06:18:05 PDT
@Sheela, do you have repro steps that we could use? Is it reproducible using Webex Safari client ? If you can share a sysdiagnose privately (
youenn@apple.com
), with the time where the issue reproduced, that would be useful too.
youenn fablet
Comment 4
2026-05-13 06:22:11 PDT
Looking at the sysdiagnose in
https://bugs.webkit.org/attachment.cgi?id=478546
comment 8
, I see that we constantly add/remove the same audio source via IncomingAudioMediaStreamTrackRendererUnit::addSource/removeSource. This is quite unexpected and might trigger some audio issues. @Sheela, can you characterise the audio issues? Is it that audio gets choppy?
youenn fablet
Comment 5
2026-05-13 06:38:16 PDT
I tried reproducing with Webex but could not so far. I did not see all the IncomingAudioMediaStreamTrackRendererUnit logging that I saw in the sysdiagnose.
youenn fablet
Comment 6
2026-05-13 06:41:45 PDT
I can reproduce the IncomingAudioMediaStreamTrackRendererUnit logging when changing of audio speakers. In the sysdiagnose I mentioned, it is as if the page is sometimes trying several times per second to change of audio speaker.
Sheela
Comment 7
2026-05-14 04:06:37 PDT
(In reply to youenn fablet from
comment #4
)
> Looking at the sysdiagnose in >
https://bugs.webkit.org/attachment.cgi?id=478546
comment 8
, I see that we > constantly add/remove the same audio source via > IncomingAudioMediaStreamTrackRendererUnit::addSource/removeSource. > This is quite unexpected and might trigger some audio issues. > > @Sheela, can you characterise the audio issues? Is it that audio gets choppy?
Yes, the audio is choppy and disruptive, making it difficult to hear clearly.
Sheela
Comment 8
2026-05-14 04:10:38 PDT
Bumping up the priority to P1, as this issue is being observed by VIPs and executives from multiple customers who are escalating it to Cisco Executives. Therefore, we need a quick fix.
youenn fablet
Comment 9
2026-05-18 00:47:18 PDT
@Sheela, can you provide more info on how to reproduce and/or provide a sysdiagnose?
youenn fablet
Comment 10
2026-05-18 02:04:52 PDT
IncomingAudioMediaStreamTrackRendererUnit logs can happen when adding/removing tracks of the rendered audio. I'll work on a fix to prevent this case. @Sheela, it would be good if you can send me another sysdiagnose that converts this is the root cause.
youenn fablet
Comment 11
2026-05-18 02:13:31 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/65094
EWS
Comment 12
2026-05-18 07:46:41 PDT
Committed
313415@main
(0ea009b4f3b9): <
https://commits.webkit.org/313415@main
> Reviewed commits have been landed. Closing PR #65094 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug